# AntarikshV1

./: .env.example  .gitignore  LICENSE  README.md  agents.json  antariksh_v1.ipynb  pyproject.toml
animuni/: agents.py  config.py  main.py  orchestrator.py  utils.py
experts/: __init__.py  culture.py  logic.py  reasoning.py
router/: __init__.py  router.py
src/: monitor.cpp
target_kernel_folder/: antariksh_v1.ipynb
tests/: test_basic.py
training_bridge/: __init__.py  bridge.py
