[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "animuni-express"
version = "0.1.0"
description = "A professional Python CLI for Animuni Express as a flexible multi-agent orchestrator."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "psutil>=5.9.0",
]

[project.scripts]
animuni = "animuni.main:app"
